--- a/index.html
+++ b/index.html
@@ -3,185 +3,110 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>BrandRadar – Finn de beste kjøpene</title>
-  <meta name="description" content="Affiliate-plattform for klær, sko og kosttilskudd. Sammenlign og finn produktene fra kjente merker." />
+  <title>BrandRadar – Klær, sko & kosttilskudd</title>
+  <meta name="description" content="Finn de beste produktene fra kjente merker. Sammenlign klær, sko og kosttilskudd fra våre partnere." />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header class="site-header">
-    <a href="index.html" class="logo" aria-label="BrandRadar">BrandRadar</a>
+
+  <!-- Øverste linje -->
+  <header class="top-header">
+    <a href="index.html" class="logo">BrandRadar</a>
 
     <form class="site-search" role="search">
       <input type="search" id="q" placeholder="Søk produkter…" aria-label="Søk" />
       <button type="submit">Søk</button>
     </form>
 
-    <button class="hamburger" aria-controls="mobileNav" aria-expanded="false" aria-label="Åpne meny">☰</button>
-
-    <!-- Desktop nav -->
-    <nav class="main-nav desktop-only" aria-label="Hovedmeny">
-      <ul>
-        <li class="dropdown">
-          <a href="#" class="nav-root">Clothing</a>
-          <div class="dropdown-menu three-col" role="menu">
-            <ul>
-              <li><span>Women</span></li>
-              <li><a data-link href="#" data-category="Clothing" data-gender="Women" data-sub="Explore all products">Explore all products</a></li>
-              <li><a data-link href="#" data-category="Clothing" data-gender="Women" data-sub="T-shirts & Tops">T-shirts & Tops</a></li>
-              <li><a data-link href="#" data-category="Clothing" data-gender="Women" data-sub="Dresses">Dresses</a></li>
-              <li><a data-link href="#" data-category="Clothing" data-gender="Women" data-sub="Jeans">Jeans</a></li>
-              <li><a data-link href="#" data-category="Clothing" data-gender="Women" data-sub="Pants">Pants</a></li>
-              <li><a data-link href="#" data-category="Clothing" data-gender="Women" data-sub="Jackets & Blazers">Jackets & Blazers</a></li>
-              <li><a data-link href="#" data-category="Clothing" data-gender="Women" data-sub="Gymwear">Gymwear</a></li>
-            </ul>
-            <ul>
-              <li><span>Men</span></li>
-              <li><a data-link href="#" data-category="Clothing" data-gender="Men" data-sub="Explore all products">Explore all products</a></li>
-              <li><a data-link href="#" data-category="Clothing" data-gender="Men" data-sub="Tshirts & Polo">Tshirts & Polo</a></li>
-              <li><a data-link href="#" data-category="Clothing" data-gender="Men" data-sub="Sweats & Hoodies">Sweats & Hoodies</a></li>
-              <li><a data-link href="#" data-category="Clothing" data-gender="Men" data-sub="Pants & Shorts">Pants & Shorts</a></li>
-              <li><a data-link href="#" data-category="Clothing" data-gender="Men" data-sub="Jeans">Jeans</a></li>
-              <li><a data-link href="#" data-category="Clothing" data-gender="Men" data-sub="Jackets">Jackets</a></li>
-            </ul>
-            <ul>
-              <li><span>Children</span></li>
-              <li><a data-link href="#" data-category="Clothing" data-gender="Children" data-sub="Explore all products">Explore all products</a></li>
-              <li><a data-link href="#" data-category="Clothing" data-gender="Children" data-sub="T shirts">T shirts</a></li>
-              <li><a data-link href="#" data-category="Clothing" data-gender="Children" data-sub="Dresses">Dresses</a></li>
-              <li><a data-link href="#" data-category="Clothing" data-gender="Children" data-sub="Pants">Pants</a></li>
-              <li><a data-link href="#" data-category="Clothing" data-gender="Children" data-sub="Sweaters">Sweaters</a></li>
-              <li><a data-link href="#" data-category="Clothing" data-gender="Children" data-sub="Jackets">Jackets</a></li>
-            </ul>
-          </div>
-        </li>
-
-        <li class="dropdown">
-          <a href="#" class="nav-root">Shoes</a>
-          <div class="dropdown-menu two-col" role="menu">
-            <ul>
-              <li><span>Women</span></li>
-              <li><a data-link href="#" data-category="Shoes" data-gender="Women" data-sub="Explore all products">Explore all products</a></li>
-              <li><a data-link href="#" data-category="Shoes" data-gender="Women" data-sub="Sneakers">Sneakers</a></li>
-              <li><a data-link href="#" data-category="Shoes" data-gender="Women" data-sub="Sandals">Sandals</a></li>
-              <li><a data-link href="#" data-category="Shoes" data-gender="Women" data-sub="Boots">Boots</a></li>
-            </ul>
-            <ul>
-              <li><span>Men</span></li>
-              <li><a data-link href="#" data-category="Shoes" data-gender="Men" data-sub="Explore all products">Explore all products</a></li>
-              <li><a data-link href="#" data-category="Shoes" data-gender="Men" data-sub="Sneakers">Sneakers</a></li>
-              <li><a data-link href="#" data-category="Shoes" data-gender="Men" data-sub="Running">Running</a></li>
-              <li><a data-link href="#" data-category="Shoes" data-gender="Men" data-sub="Boots">Boots</a></li>
-            </ul>
-          </div>
-        </li>
-
-        <li class="dropdown">
-          <a href="#" class="nav-root">Supplements</a>
-          <div class="dropdown-menu one-col" role="menu">
-            <ul>
-              <li><span>Shop</span></li>
-              <li><a data-link href="#" data-category="Supplements" data-sub="Explore all products">Explore all products</a></li>
-              <li><a data-link href="#" data-category="Supplements" data-sub="Proteiner">Proteiner</a></li>
-              <li><a data-link href="#" data-category="Supplements" data-sub="Kreatin">Kreatin</a></li>
-              <li><a data-link href="#" data-category="Supplements" data-sub="Vitaminer og mineraler">Vitaminer og mineraler</a></li>
-            </ul>
-          </div>
-        </li>
-
-        <li><a href="news.html">News</a></li>
-        <li><a href="brands.html">Brands</a></li>
-      </ul>
+    <nav class="top-links">
+      <a href="news.html">News</a>
+      <a href="brands.html">Brands</a>
     </nav>
+
+    <button class="hamburger" aria-controls="mobileNav" aria-expanded="false" aria-label="Åpne meny">☰</button>
   </header>
 
-  <!-- Mobilmeny -->
-  <nav id="mobileNav" class="mobile-nav" hidden aria-label="Mobilmeny">
+  <!-- Nedre linje: produktmeny -->
+  <nav class="shop-nav desktop-only">
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="news.html">News</a></li>
-      <li><a href="brands.html">Brands</a></li>
-      <li><button class="mobile-accordion">Clothing</button>
-        <div class="panel" hidden>
-          <strong>Women</strong>
-          <a data-link href="#" data-category="Clothing" data-gender="Women" data-sub="Explore all products">Explore all products</a>
-          <a data-link href="#" data-category="Clothing" data-gender="Women" data-sub="T-shirts & Tops">T-shirts & Tops</a>
-          <a data-link href="#" data-category="Clothing" data-gender="Women" data-sub="Dresses">Dresses</a>
-          <a data-link href="#" data-category="Clothing" data-gender="Women" data-sub="Jeans">Jeans</a>
-          <a data-link href="#" data-category="Clothing" data-gender="Women" data-sub="Pants">Pants</a>
-          <a data-link href="#" data-category="Clothing" data-gender="Women" data-sub="Jackets & Blazers">Jackets & Blazers</a>
-          <a data-link href="#" data-category="Clothing" data-gender="Women" data-sub="Gymwear">Gymwear</a>
-          <strong>Men</strong>
-          <a data-link href="#" data-category="Clothing" data-gender="Men" data-sub="Explore all products">Explore all products</a>
-          <a data-link href="#" data-category="Clothing" data-gender="Men" data-sub="Tshirts & Polo">Tshirts & Polo</a>
-          <a data-link href="#" data-category="Clothing" data-gender="Men" data-sub="Sweats & Hoodies">Sweats & Hoodies</a>
-          <a data-link href="#" data-category="Clothing" data-gender="Men" data-sub="Pants & Shorts">Pants & Shorts</a>
-          <a data-link href="#" data-category="Clothing" data-gender="Men" data-sub="Jeans">Jeans</a>
-          <a data-link href="#" data-category="Clothing" data-gender="Men" data-sub="Jackets">Jackets</a>
-          <strong>Children</strong>
-          <a data-link href="#" data-category="Clothing" data-gender="Children" data-sub="Explore all products">Explore all products</a>
-          <a data-link href="#" data-category="Clothing" data-gender="Children" data-sub="T shirts">T shirts</a>
-          <a data-link href="#" data-category="Clothing" data-gender="Children" data-sub="Dresses">Dresses</a>
-          <a data-link href="#" data-category="Clothing" data-gender="Children" data-sub="Pants">Pants</a>
-          <a data-link href="#" data-category="Clothing" data-gender="Children" data-sub="Sweaters">Sweaters</a>
-          <a data-link href="#" data-category="Clothing" data-gender="Children" data-sub="Jackets">Jackets</a>
+      <li class="dropdown">
+        <a href="#">Clothing</a>
+        <div class="dropdown-menu three-col">
+          <ul>
+            <li><span>Women</span></li>
+            <li><a data-cat="Clothing" data-gen="Women" data-sub="Explore all products">Explore all products</a></li>
+            <li><a data-cat="Clothing" data-gen="Women" data-sub="T-shirts & Tops">T-shirts & Tops</a></li>
+            <li><a data-cat="Clothing" data-gen="Women" data-sub="Dresses">Dresses</a></li>
+            <li><a data-cat="Clothing" data-gen="Women" data-sub="Jeans">Jeans</a></li>
+            <li><a data-cat="Clothing" data-gen="Women" data-sub="Pants">Pants</a></li>
+            <li><a data-cat="Clothing" data-gen="Women" data-sub="Jackets & Blazers">Jackets & Blazers</a></li>
+            <li><a data-cat="Clothing" data-gen="Women" data-sub="Gymwear">Gymwear</a></li>
+          </ul>
+          <ul>
+            <li><span>Men</span></li>
+            <li><a data-cat="Clothing" data-gen="Men" data-sub="Explore all products">Explore all products</a></li>
+            <li><a data-cat="Clothing" data-gen="Men" data-sub="Tshirts & Polo">T-shirts & Polo</a></li>
+            <li><a data-cat="Clothing" data-gen="Men" data-sub="Sweats & Hoodies">Sweats & Hoodies</a></li>
+            <li><a data-cat="Clothing" data-gen="Men" data-sub="Pants & Shorts">Pants & Shorts</a></li>
+            <li><a data-cat="Clothing" data-gen="Men" data-sub="Jeans">Jeans</a></li>
+            <li><a data-cat="Clothing" data-gen="Men" data-sub="Jackets">Jackets</a></li>
+          </ul>
+          <ul>
+            <li><span>Children</span></li>
+            <li><a data-cat="Clothing" data-gen="Children" data-sub="Explore all products">Explore all products</a></li>
+            <li><a data-cat="Clothing" data-gen="Children" data-sub="T shirts">T-shirts</a></li>
+            <li><a data-cat="Clothing" data-gen="Children" data-sub="Dresses">Dresses</a></li>
+            <li><a data-cat="Clothing" data-gen="Children" data-sub="Pants">Pants</a></li>
+            <li><a data-cat="Clothing" data-gen="Children" data-sub="Sweaters">Sweaters</a></li>
+            <li><a data-cat="Clothing" data-gen="Children" data-sub="Jackets">Jackets</a></li>
+          </ul>
         </div>
       </li>
-      <li><button class="mobile-accordion">Shoes</button>
-        <div class="panel" hidden>
-          <strong>Women</strong>
-          <a data-link href="#" data-category="Shoes" data-gender="Women" data-sub="Explore all products">Explore all products</a>
-          <a data-link href="#" data-category="Shoes" data-gender="Women" data-sub="Sneakers">Sneakers</a>
-          <a data-link href="#" data-category="Shoes" data-gender="Women" data-sub="Sandals">Sandals</a>
-          <a data-link href="#" data-category="Shoes" data-gender="Women" data-sub="Boots">Boots</a>
-          <strong>Men</strong>
-          <a data-link href="#" data-category="Shoes" data-gender="Men" data-sub="Explore all products">Explore all products</a>
-          <a data-link href="#" data-category="Shoes" data-gender="Men" data-sub="Sneakers">Sneakers</a>
-          <a data-link href="#" data-category="Shoes" data-gender="Men" data-sub="Running">Running</a>
-          <a data-link href="#" data-category="Shoes" data-gender="Men" data-sub="Boots">Boots</a>
+
+      <li class="dropdown">
+        <a href="#">Shoes</a>
+        <div class="dropdown-menu two-col">
+          <ul>
+            <li><span>Women</span></li>
+            <li><a data-cat="Shoes" data-gen="Women" data-sub="Explore all products">Explore all products</a></li>
+            <li><a data-cat="Shoes" data-gen="Women" data-sub="Sneakers">Sneakers</a></li>
+            <li><a data-cat="Shoes" data-gen="Women" data-sub="Sandals">Sandals</a></li>
+            <li><a data-cat="Shoes" data-gen="Women" data-sub="Boots">Boots</a></li>
+          </ul>
+          <ul>
+            <li><span>Men</span></li>
+            <li><a data-cat="Shoes" data-gen="Men" data-sub="Explore all products">Explore all products</a></li>
+            <li><a data-cat="Shoes" data-gen="Men" data-sub="Sneakers">Sneakers</a></li>
+            <li><a data-cat="Shoes" data-gen="Men" data-sub="Running">Running</a></li>
+            <li><a data-cat="Shoes" data-gen="Men" data-sub="Boots">Boots</a></li>
+          </ul>
         </div>
       </li>
-      <li><button class="mobile-accordion">Supplements</button>
-        <div class="panel" hidden>
-          <a data-link href="#" data-category="Supplements" data-sub="Explore all products">Explore all products</a>
-          <a data-link href="#" data-category="Supplements" data-sub="Proteiner">Proteiner</a>
-          <a data-link href="#" data-category="Supplements" data-sub="Kreatin">Kreatin</a>
-          <a data-link href="#" data-category="Supplements" data-sub="Vitaminer og mineraler">Vitaminer og mineraler</a>
+
+      <li class="dropdown">
+        <a href="#">Supplements</a>
+        <div class="dropdown-menu one-col">
+          <ul>
+            <li><a data-cat="Supplements" data-sub="Explore all products">Explore all products</a></li>
+            <li><a data-cat="Supplements" data-sub="Proteiner">Proteiner</a></li>
+            <li><a data-cat="Supplements" data-sub="Kreatin">Kreatin</a></li>
+            <li><a data-cat="Supplements" data-sub="Vitaminer og mineraler">Vitaminer & mineraler</a></li>
+          </ul>
         </div>
       </li>
     </ul>
   </nav>
 
+  <!-- Hovedinnhold -->
   <main class="container">
     <h1>Utvalgte produkter</h1>
-
-    <div class="filters">
-      <select id="filterCategory" aria-label="Kategori">
-        <option value="">Alle kategorier</option>
-        <option value="Clothing">Clothing</option>
-        <option value="Shoes">Shoes</option>
-        <option value="Supplements">Supplements</option>
-      </select>
-      <select id="filterGender" aria-label="Kjønn">
-        <option value="">Alle</option>
-        <option value="Women">Women</option>
-        <option value="Men">Men</option>
-        <option value="Children">Children</option>
-      </select>
-      <input type="search" id="filterQuery" placeholder="Søk i navn/merke…" aria-label="Søk i produkter" />
-    </div>
-
     <div id="products" class="grid"></div>
   </main>
 
-  <footer class="site-footer">
-    <p>© BrandRadar</p>
-  </footer>
-
+  <footer class="site-footer">© BrandRadar</footer>
   <script src="script.js"></script>
 </body>
 </html>
-
-
 
 
 
