--- a/news.html
+++ b/news.html
@@ -1,29 +1,21 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BrandRadar – News</title>
-  <meta name="description" content="Siste publiserte produkter fra våre partnere." />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="site-header">
-    <a href="index.html" class="logo">BrandRadar</a>
-    <nav class="main-nav simple">
-      <a href="index.html">Home</a>
-      <a href="news.html" aria-current="page">News</a>
-      <a href="brands.html">Brands</a>
-    </nav>
-  </header>
+  <!-- Inkluder samme header og shop-nav som index -->
+  <div id="header-placeholder"></div>
 
   <main class="container">
-    <h1>Nyheter</h1>
-    <p>De nyeste produktene (sortert etter publiseringsdato).</p>
+    <h1>Nyeste produkter</h1>
     <div id="news" class="grid"></div>
   </main>
 
-  <footer class="site-footer"><p>© BrandRadar</p></footer>
+  <footer class="site-footer">© BrandRadar</footer>
   <script src="script.js"></script>
 </body>
 </html>
