--- a/index.html
+++ b/index.html
@@ -24,71 +24,98 @@
     <button class="hamburger" aria-controls="mobileNav" aria-expanded="false">☰</button>
   </header>
 
-  <!-- SHOP NAV (lys rad) -->
+  <!-- SHOP NAV -->
   <nav class="shop-nav desktop-only">
     <ul>
+      <!-- CLOTHING -->
       <li class="dropdown">
         <a href="#">Clothing</a>
-        <div class="mega-menu three-col">
+        <div class="mega-menu">
           <ul>
             <li><span>Women</span></li>
-            <li><a data-cat="Clothing" data-gen="Women" data-sub="Explore all products">Explore all products</a></li>
-            <li><a data-cat="Clothing" data-gen="Women" data-sub="T-shirts & Tops">T-shirts & Tops</a></li>
-            <li><a data-cat="Clothing" data-gen="Women" data-sub="Dresses">Dresses</a></li>
-            <li><a data-cat="Clothing" data-gen="Women" data-sub="Jeans">Jeans</a></li>
-            <li><a data-cat="Clothing" data-gen="Women" data-sub="Pants">Pants</a></li>
-            <li><a data-cat="Clothing" data-gen="Women" data-sub="Jackets & Blazers">Jackets & Blazers</a></li>
-            <li><a data-cat="Clothing" data-gen="Women" data-sub="Gymwear">Gymwear</a></li>
+            <li><a href="#">Explore all products</a></li>
+            <li><a href="#">T-shirts & Tops</a></li>
+            <li><a href="#">Dresses</a></li>
+            <li><a href="#">Jeans</a></li>
+            <li><a href="#">Pants</a></li>
+            <li><a href="#">Jackets & Blazers</a></li>
+            <li><a href="#">Gymwear</a></li>
           </ul>
           <ul>
             <li><span>Men</span></li>
-            <li><a data-cat="Clothing" data-gen="Men" data-sub="Explore all products">Explore all products</a></li>
-            <li><a data-cat="Clothing" data-gen="Men" data-sub="Tshirts & Polo">Tshirts & Polo</a></li>
-            <li><a data-cat="Clothing" data-gen="Men" data-sub="Sweats & Hoodies">Sweats & Hoodies</a></li>
-            <li><a data-cat="Clothing" data-gen="Men" data-sub="Pants & Shorts">Pants & Shorts</a></li>
-            <li><a data-cat="Clothing" data-gen="Men" data-sub="Jeans">Jeans</a></li>
-            <li><a data-cat="Clothing" data-gen="Men" data-sub="Jackets">Jackets</a></li>
+            <li><a href="#">Explore all products</a></li>
+            <li><a href="#">T-shirts & Polo</a></li>
+            <li><a href="#">Sweats & Hoodies</a></li>
+            <li><a href="#">Pants & Shorts</a></li>
+            <li><a href="#">Jeans</a></li>
+            <li><a href="#">Jackets</a></li>
           </ul>
           <ul>
             <li><span>Children</span></li>
-            <li><a data-cat="Clothing" data-gen="Children" data-sub="Explore all products">Explore all products</a></li>
-            <li><a data-cat="Clothing" data-gen="Children" data-sub="T shirts">T shirts</a></li>
-            <li><a data-cat="Clothing" data-gen="Children" data-sub="Dresses">Dresses</a></li>
-            <li><a data-cat="Clothing" data-gen="Children" data-sub="Pants">Pants</a></li>
-            <li><a data-cat="Clothing" data-gen="Children" data-sub="Sweaters">Sweaters</a></li>
-            <li><a data-cat="Clothing" data-gen="Children" data-sub="Jackets">Jackets</a></li>
+            <li><a href="#">Explore all products</a></li>
+            <li><a href="#">T-shirts</a></li>
+            <li><a href="#">Dresses</a></li>
+            <li><a href="#">Pants</a></li>
+            <li><a href="#">Sweaters</a></li>
+            <li><a href="#">Jackets</a></li>
           </ul>
         </div>
       </li>
 
+      <!-- SHOES -->
       <li class="dropdown">
         <a href="#">Shoes</a>
-        <div class="mega-menu two-col">
+        <div class="mega-menu">
           <ul>
             <li><span>Women</span></li>
-            <li><a data-cat="Shoes" data-gen="Women" data-sub="Explore all products">Explore all products</a></li>
-            <li><a data-cat="Shoes" data-gen="Women" data-sub="Sneakers">Sneakers</a></li>
-            <li><a data-cat="Shoes" data-gen="Women" data-sub="Sandals">Sandals</a></li>
-            <li><a data-cat="Shoes" data-gen="Women" data-sub="Boots">Boots</a></li>
+            <li><a href="#">Explore all products</a></li>
+            <li><a href="#">Sneakers</a></li>
+            <li><a href="#">Sandals</a></li>
+            <li><a href="#">Boots</a></li>
+            <li><a href="#">Heels</a></li>
           </ul>
           <ul>
             <li><span>Men</span></li>
-            <li><a data-cat="Shoes" data-gen="Men" data-sub="Explore all products">Explore all products</a></li>
-            <li><a data-cat="Shoes" data-gen="Men" data-sub="Sneakers">Sneakers</a></li>
-            <li><a data-cat="Shoes" data-gen="Men" data-sub="Running">Running</a></li>
-            <li><a data-cat="Shoes" data-gen="Men" data-sub="Boots">Boots</a></li>
+            <li><a href="#">Explore all products</a></li>
+            <li><a href="#">Sneakers</a></li>
+            <li><a href="#">Running Shoes</a></li>
+            <li><a href="#">Boots</a></li>
+            <li><a href="#">Formal Shoes</a></li>
+          </ul>
+          <ul>
+            <li><span>Children</span></li>
+            <li><a href="#">Explore all products</a></li>
+            <li><a href="#">Sneakers</a></li>
+            <li><a href="#">School Shoes</a></li>
+            <li><a href="#">Sandals</a></li>
+            <li><a href="#">Boots</a></li>
           </ul>
         </div>
       </li>
 
+      <!-- SUPPLEMENTS -->
       <li class="dropdown">
         <a href="#">Supplements</a>
-        <div class="mega-menu one-col">
+        <div class="mega-menu">
           <ul>
-            <li><a data-cat="Supplements" data-sub="Explore all products">Explore all products</a></li>
-            <li><a data-cat="Supplements" data-sub="Proteiner">Proteiner</a></li>
-            <li><a data-cat="Supplements" data-sub="Kreatin">Kreatin</a></li>
-            <li><a data-cat="Supplements" data-sub="Vitaminer og mineraler">Vitaminer & mineraler</a></li>
+            <li><span>Categories</span></li>
+            <li><a href="#">Explore all products</a></li>
+            <li><a href="#">Proteiner</a></li>
+            <li><a href="#">Proteinbarer</a></li>
+            <li><a href="#">Kreatin</a></li>
+            <li><a href="#">Vitaminer & Mineraler</a></li>
+          </ul>
+          <ul>
+            <li><span>Brands</span></li>
+            <li><a href="#">MyProtein</a></li>
+            <li><a href="#">Optimum Nutrition</a></li>
+            <li><a href="#">Gymshark Nutrition</a></li>
+          </ul>
+          <ul>
+            <li><span>Goals</span></li>
+            <li><a href="#">Build Muscle</a></li>
+            <li><a href="#">Weight Loss</a></li>
+            <li><a href="#">Recovery</a></li>
           </ul>
         </div>
       </li>
