--- a/index.html
+++ b/index.html
@@ -125,6 +125,15 @@
   <!-- HOVEDINNHOLD -->
   <main class="container">
     <h1>Utvalgte produkter</h1>
+    <section class="mobile-shop">
+  <h2>Shop by category</h2>
+  <div class="mobile-links">
+    <a href="#">Clothing</a>
+    <a href="#">Shoes</a>
+    <a href="#">Supplements</a>
+  </div>
+</section>
+
     <div id="products" class="grid"></div>
   </main>
 
@@ -132,3 +141,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
