--- a/index.html
+++ b/index.html
@@ -24,103 +24,101 @@
     <button class="hamburger" aria-controls="mobileNav" aria-expanded="false">☰</button>
   </header>
 
-  <!-- SHOP NAV -->
-  <nav class="shop-nav desktop-only">
-    <ul>
-      <!-- CLOTHING -->
-      <li class="dropdown">
-        <a href="#">Clothing</a>
-        <div class="mega-menu">
-          <ul>
-            <li><span>Women</span></li>
-            <li><a href="#">Explore all products</a></li>
-            <li><a href="#">T-shirts & Tops</a></li>
-            <li><a href="#">Dresses</a></li>
-            <li><a href="#">Jeans</a></li>
-            <li><a href="#">Pants</a></li>
-            <li><a href="#">Jackets & Blazers</a></li>
-            <li><a href="#">Gymwear</a></li>
-          </ul>
-          <ul>
-            <li><span>Men</span></li>
-            <li><a href="#">Explore all products</a></li>
-            <li><a href="#">T-shirts & Polo</a></li>
-            <li><a href="#">Sweats & Hoodies</a></li>
-            <li><a href="#">Pants & Shorts</a></li>
-            <li><a href="#">Jeans</a></li>
-            <li><a href="#">Jackets</a></li>
-          </ul>
-          <ul>
-            <li><span>Children</span></li>
-            <li><a href="#">Explore all products</a></li>
-            <li><a href="#">T-shirts</a></li>
-            <li><a href="#">Dresses</a></li>
-            <li><a href="#">Pants</a></li>
-            <li><a href="#">Sweaters</a></li>
-            <li><a href="#">Jackets</a></li>
-          </ul>
-        </div>
-      </li>
+<!-- 🧭 SHOP NAVIGATION (DESKTOP) -->
+<ul class="shop-nav desktop-only">
+  <!-- CLOTHING -->
+  <li class="dropdown">
+    <a href="#">Clothing</a>
+    <div class="mega-menu">
+      <ul>
+        <li><span>Women</span></li>
+        <li><a href="#">Explore all products</a></li>
+        <li><a href="#">T-shirts & Tops</a></li>
+        <li><a href="#">Dresses</a></li>
+        <li><a href="#">Jeans</a></li>
+        <li><a href="#">Pants</a></li>
+        <li><a href="#">Jackets & Blazers</a></li>
+        <li><a href="#">Gymwear</a></li>
+      </ul>
+      <ul>
+        <li><span>Men</span></li>
+        <li><a href="#">Explore all products</a></li>
+        <li><a href="#">T-shirts & Polo</a></li>
+        <li><a href="#">Sweats & Hoodies</a></li>
+        <li><a href="#">Pants & Shorts</a></li>
+        <li><a href="#">Jeans</a></li>
+        <li><a href="#">Jackets</a></li>
+      </ul>
+      <ul>
+        <li><span>Children</span></li>
+        <li><a href="#">Explore all products</a></li>
+        <li><a href="#">T-shirts</a></li>
+        <li><a href="#">Dresses</a></li>
+        <li><a href="#">Pants</a></li>
+        <li><a href="#">Sweaters</a></li>
+        <li><a href="#">Jackets</a></li>
+      </ul>
+    </div>
+  </li>
 
-      <!-- SHOES -->
-      <li class="dropdown">
-        <a href="#">Shoes</a>
-        <div class="mega-menu">
-          <ul>
-            <li><span>Women</span></li>
-            <li><a href="#">Explore all products</a></li>
-            <li><a href="#">Sneakers</a></li>
-            <li><a href="#">Sandals</a></li>
-            <li><a href="#">Boots</a></li>
-            <li><a href="#">Heels</a></li>
-          </ul>
-          <ul>
-            <li><span>Men</span></li>
-            <li><a href="#">Explore all products</a></li>
-            <li><a href="#">Sneakers</a></li>
-            <li><a href="#">Running Shoes</a></li>
-            <li><a href="#">Boots</a></li>
-            <li><a href="#">Formal Shoes</a></li>
-          </ul>
-          <ul>
-            <li><span>Children</span></li>
-            <li><a href="#">Explore all products</a></li>
-            <li><a href="#">Sneakers</a></li>
-            <li><a href="#">School Shoes</a></li>
-            <li><a href="#">Sandals</a></li>
-            <li><a href="#">Boots</a></li>
-          </ul>
-        </div>
-      </li>
+  <!-- SHOES -->
+  <li class="dropdown">
+    <a href="#">Shoes</a>
+    <div class="mega-menu">
+      <ul>
+        <li><span>Women</span></li>
+        <li><a href="#">Explore all products</a></li>
+        <li><a href="#">Sneakers</a></li>
+        <li><a href="#">Boots</a></li>
+        <li><a href="#">Heels</a></li>
+        <li><a href="#">Sandals</a></li>
+      </ul>
+      <ul>
+        <li><span>Men</span></li>
+        <li><a href="#">Explore all products</a></li>
+        <li><a href="#">Sneakers</a></li>
+        <li><a href="#">Loafers</a></li>
+        <li><a href="#">Boots</a></li>
+        <li><a href="#">Dress shoes</a></li>
+      </ul>
+      <ul>
+        <li><span>Children</span></li>
+        <li><a href="#">Explore all products</a></li>
+        <li><a href="#">Sneakers</a></li>
+        <li><a href="#">Sandals</a></li>
+        <li><a href="#">Winter shoes</a></li>
+      </ul>
+    </div>
+  </li>
 
-      <!-- SUPPLEMENTS -->
-      <li class="dropdown">
-        <a href="#">Supplements</a>
-        <div class="mega-menu">
-          <ul>
-            <li><span>Categories</span></li>
-            <li><a href="#">Explore all products</a></li>
-            <li><a href="#">Proteiner</a></li>
-            <li><a href="#">Proteinbarer</a></li>
-            <li><a href="#">Kreatin</a></li>
-            <li><a href="#">Vitaminer & Mineraler</a></li>
-          </ul>
-          <ul>
-            <li><span>Brands</span></li>
-            <li><a href="#">MyProtein</a></li>
-            <li><a href="#">Optimum Nutrition</a></li>
-            <li><a href="#">Gymshark Nutrition</a></li>
-          </ul>
-          <ul>
-            <li><span>Goals</span></li>
-            <li><a href="#">Build Muscle</a></li>
-            <li><a href="#">Weight Loss</a></li>
-            <li><a href="#">Recovery</a></li>
-          </ul>
-        </div>
-      </li>
-    </ul>
-  </nav>
+  <!-- SUPPLEMENTS -->
+  <li class="dropdown">
+    <a href="#">Supplements</a>
+    <div class="mega-menu">
+      <ul>
+        <li><span>Categories</span></li>
+        <li><a href="#">Explore all products</a></li>
+        <li><a href="#">Proteiner</a></li>
+        <li><a href="#">Proteinbarer</a></li>
+        <li><a href="#">Kreatin</a></li>
+        <li><a href="#">Vitaminer & Mineraler</a></li>
+      </ul>
+      <ul>
+        <li><span>Brands</span></li>
+        <li><a href="#">MyProtein</a></li>
+        <li><a href="#">Optimum Nutrition</a></li>
+        <li><a href="#">Gymshark Nutrition</a></li>
+      </ul>
+      <ul>
+        <li><span>Goals</span></li>
+        <li><a href="#">Build Muscle</a></li>
+        <li><a href="#">Weight Loss</a></li>
+        <li><a href="#">Recovery</a></li>
+      </ul>
+    </div>
+  </li>
+</ul>
+
 
   <!-- HOVEDINNHOLD -->
   <main class="container">
@@ -141,4 +139,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
